# heelixnotes

./: LOCAL_MODELS_GUIDE.md  README.md  index.html  package-lock.json  package.json
.claude/: settings.local.json
src/: main.tsx  theme.ts
src-tauri/: Cargo.toml  Info.plist  macos-entitlements.plist  tauri.conf.json
src-tauri/migrations/2024-04-09-160000_add_vectorized_column/: down.sql  up.sql
src-tauri/migrations/2024-12-20-162928_create_projects_tables/: up.sql
src-tauri/migrations/2025-01-20-010000_add_document_chunks/: down.sql  up.sql
src-tauri/migrations/2025-01-26-010000_add_message_sources/: down.sql  up.sql
src-tauri/migrations/2025-05-02-000000_add_plain_text_to_project_activities/: down.sql  up.sql
src-tauri/src/: lib.rs  main.rs
src-tauri/src/bootstrap/: check_prerequisites_macos.rs  check_prerequisites_windows.rs
src-tauri/src/configuration/: database.rs  settings.rs
src-tauri/src/engine/: audio_engine.rs  chat_engine.rs  chat_engine_gemini.rs  chat_engine_local.rs  chat_engine_openai.rs  document_cleanup_engine.rs  mod.rs  project_vector_engine.rs  similarity_search_engine.rs  transcription_engine.rs
src-tauri/src/entity/: chat_item.rs  mod.rs
src-tauri/src/repository/: activity_log_repository.rs  chat_db_repository.rs  chunk_repository.rs  mod.rs  project_repository.rs  settings_repository.rs
src-tauri/src/window_details_collector/macos/: mod.rs  window_details_collector_macos.rs
src-tauri/src/window_details_collector/windows/v2/: mod.rs
src-tauri/tests/: tests-windows.rs
src/Providers/: SettingsProvider.tsx
src/components/: ActivitySelector.tsx  ChatHistoryList.tsx  HtmlSanitizer.tsx  Navigation.tsx  ProjectList.tsx  index.ts
src/components/layout/: ScreenContainer.tsx
src/data/: activities.ts  project.ts
src/features/: GeneralSettings.tsx  HistorySettings.tsx  PrivacySettings.tsx
src/features/Projects/: ProjectModal.tsx  Projects.tsx
src/screens/: OnboardingScreen.tsx
src/screens/ChatScreen/: ChatScreen.tsx  types.ts
src/screens/ChatScreen/components/: ChatHeader.tsx  ChatInput.tsx  ModelSelector.tsx  NewConversationMessage.tsx  SelectActivityModal.tsx  SelectDocumentModal.tsx  SettingsModal.tsx  SourceModal.tsx  SourcesCitation.tsx  TipTapEditor.tsx  index.ts
src/screens/ChatScreen/components/messages/: AssistantMessage.tsx  message-codeblock.tsx  message-markdown.tsx
src/state/: projectsState.ts
